--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,14 +3,9 @@ li{list-style: none;}
 a:link, a:visited{text-decoration: none; color:#333;}
 .clearfix:after{content: ""; display: block; clear: both;}
 
-h1{text-align: center; margin-bottom: 10px;}
-ul.gnb{margin-bottom: 10px;}
-ul.gnb li{float: left; width: calc(100% / 3); text-align: center; line-height: 40px;}
-ul.gnb li:hover{background: skyblue;}
-
-ul.gnb li a{display: block; color:#000;}
-
 .router-link-active{  background: orange;}
+.navbar-nav{margin-left: auto;}
+.navbar-nav > li{margin-right: 10px;}
 
 
 footer.footer{
