--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,16 @@ a:link, a:visited{text-decoration: none; color:#333;}
 .navbar-nav{margin-left: auto;}
 .navbar-nav > li{margin-right: 10px;}
 
+.swiper-container{margin-bottom: 20px;}
+
+.best h2:after{content: ""; width: 30px; height: 2px; background: #333; display: block; margin: 10px auto;}
+.best p{text-align: center; margin-bottom: 20px;}
+.best .row{margin-bottom: 20px;}
+.best .container{margin-bottom: 20px;}
+
+.best .btn.btn-primary{padding: 0; height: 40px;}
+.best .btn.btn-primary a{ color: #fff; line-height: 40px;}
+
 
 footer.footer{
     background: #ccc; padding: 20px;
