--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@ li{list-style: none;}
 a:link, a:visited{text-decoration: none; color:#333;}
 .clearfix:after{content: ""; display: block; clear: both;}
 
-.router-link-active{  background: orange;}
+.router-link-active{  background: skyblue; border-radius: 5px;}
 .navbar-nav{margin-left: auto;}
 .navbar-nav > li{margin-right: 10px;}
 
